# ardupilot

./: .gitignore  .gitmodules  .travis.yml  BUZZ.txt  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  aclocal.m4  analyse_exporter.php  ardudefinitions.cmake  building.py.diff  buzz.persist  buzz.persist.xml  buzz.sh  buzz1.php  buzz_profiler.sh  cmake.build.flash.sh  cmake.build.sh  cmake.esp32s3empty.configure.sh  cmake.monitor.sh  config.status  configure  configure.ac  configure_env.json  configure_options.json  core5.txt  em-waf.diff  esp32s3.configure.build.buzz.upload.sh  esp32s3.gdb.sh  esp32s3.openocd.sh  gcc.py  gdb.profiler.init  gdbinit.esp32s3  gxx.py  lib_canard_debugging.diff  mingnotes.txt  pagefault.txt  partitionsS3.csv  project_description.bootloader.json  (+13 more)
.github/workflows/: test_sitl_plane.yml
AntennaTracker/: CMakeLists.txt
ArduCopter/: AP_Arming.cpp  AP_Arming.h  CMakeLists.txt  Copter.h  Parameters.h  RC_Channel.h  mode.h  navigation.cpp
ArduPlane/: AP_Arming.cpp  AP_Arming.h  ArduPlane.cpp  CMakeLists.txt  GCS_Mavlink.cpp  GCS_Mavlink.h  Log.cpp  Parameters.cpp  Parameters.h  Plane.cpp  Plane.h  altitude.cpp  config.h  control_modes.cpp  defines.h  geofence.cpp  is_flying.cpp  navigation.cpp  servos.cpp  system.cpp  version.h
ArduSub/: CMakeLists.txt
Blimp/: CMakeLists.txt
Rover/: CMakeLists.txt  Rover.cpp  Rover.h
Tools/: debugprobe_on_pico2.uf2
Tools/AP_Periph/: AP_Periph.cpp  AP_Periph.h  GCS_MAVLink.cpp  Parameters.cpp  can.cpp  release-notes.txt  version.cpp  wscript
Tools/ardupilotwaf/: ap_library.py  ardupilotwaf.py  boards.py  build_summary.py  chibios.py  cmake.py  cmake_exporter.py  cxx_checks.py  esp32.py  gen_from_hwdef_dat.py  gtest.py
Tools/autotest/: arducopter.py  autotest.py  sim_vehicle.py
Tools/debug/: esp32s3.configure.build.buzz.upload.sh  esp32s3.gdb.buzz.sh  esp32s3.openocd.sh
Tools/scripts/: board_list.py  build_ci.sh  configure_all.py  install-prereqs-ubuntu.sh
autom4te.cache/: output.2  output.4  output.5  requests  traces.0  traces.2  traces.3  traces.4  traces.5
build2/: Makefile
build2/AntennaTracker/: Makefile
build2/ArduCopter/: Makefile
build2/ArduPlane/: Makefile
build2/ArduSub/: Makefile
build2/Blimp/: Makefile
build2/Rover/: Makefile
lib/: .gitignore  Makefile  Makefile.in  alloca.h  config.h  config.h.in  errno.h  fcntl.h  signal.h  stdint.h  stdio.h  string.h  termios.h  unistd.h
lib/.deps/: bind.Po  msvc-inval.Po  msvc-nothrow.Po  sys_socket.Po
lib/autom4te.cache/: requests
lib/sys/: ioctl.h  select.h  socket.h  stat.h  time.h  uio.h
libraries/: CMakeLists.txt  libraries.cmake.generator.sh  libs.short.readable.txt  libs.short.txt.cmake  sys
libraries/AC_AttitudeControl/: AC_AttitudeControl.h  AC_AttitudeControl_Multi.h  AC_PosControl.h
libraries/AC_PID/: AC_P.h  AC_PID.h  AC_PID_2D.h  AC_PI_2D.h
libraries/AC_WPNav/: AC_Loiter.h  AC_WPNav.h  AC_WPNav_OA.h
libraries/AP_ADSB/: AP_ADSB.cpp
libraries/AP_AHRS/: AP_AHRS.h  AP_AHRS_DCM.cpp  AP_AHRS_DCM.h  AP_AHRS_NavEKF.cpp  AP_AHRS_NavEKF.h  AP_AHRS_View.h
libraries/AP_AccelCal/: AP_AccelCal.h  AccelCalibrator.h
libraries/AP_AdvancedFailsafe/: AP_AdvancedFailsafe.cpp  AP_AdvancedFailsafe.h
libraries/AP_Airspeed/: Airspeed_Calibration.cpp
libraries/AP_Arming/: AP_Arming.h
libraries/AP_Baro/: AP_Baro.h  AP_Baro_SPL06.cpp
libraries/AP_BoardConfig/: AP_BoardConfig.cpp  AP_BoardConfig.h  AP_BoardConfig_CAN.cpp  AP_BoardConfig_CAN.h  IMU_heater.cpp  board_drivers.cpp
libraries/AP_Button/: AP_Button.cpp
libraries/AP_CANManager/: AP_CANTester.cpp  AP_CANTester_KDECAN.cpp  AP_SLCANIface.cpp  AP_SLCANIface.h
libraries/AP_Camera/: AP_Camera.cpp
libraries/AP_CheckFirmware/: AP_CheckFirmware.cpp  AP_CheckFirmware_secure_command.cpp
libraries/AP_Common/: AP_Common.h  Location.cpp  Location.h  time.cpp  time.h
libraries/AP_Compass/: AP_Compass.cpp  AP_Compass.h  AP_Compass_AK09916.cpp  AP_Compass_AK09916.h
libraries/AP_EFI/: AP_EFI_State.h
libraries/AP_ExternalAHRS/: AP_ExternalAHRS_InertialLabs.cpp
libraries/AP_Filesystem/: AP_Filesystem.cpp  AP_Filesystem.h  AP_Filesystem_ESP32.cpp  AP_Filesystem_ESP32.h  AP_Filesystem_FATFS.cpp  AP_Filesystem_FATFS.h  AP_Filesystem_Param.cpp  AP_Filesystem_Param.h  AP_Filesystem_ROMFS.cpp  AP_Filesystem_ROMFS.h  AP_Filesystem_Sys.cpp  AP_Filesystem_Sys.h  AP_Filesystem_backend.cpp  AP_Filesystem_backend.h  AP_Filesystem_config.h  AP_Filesystem_posix.cpp  AP_Filesystem_posix.h  posix_compat.h
libraries/AP_FlashStorage/: AP_FlashStorage.cpp
libraries/AP_Frsky_Telem/: AP_Frsky_Backend.cpp  AP_Frsky_Backend.h  AP_Frsky_D.cpp  AP_Frsky_D.h  AP_Frsky_SPort.cpp  AP_Frsky_SPort.h  AP_Frsky_SPort_Passthrough.cpp  AP_Frsky_SPort_Passthrough.h
libraries/AP_GPS/: AP_GPS.cpp  AP_GPS.h  AP_GPS_MAV.cpp  AP_GPS_MSP.cpp  AP_GPS_UBLOX.cpp  AP_GPS_UBLOX.h  RTCM3_Parser.cpp  RTCM3_Parser.h
libraries/AP_HAL/: AP_HAL_Boards.h  AP_HAL_Macros.h  CANIface.h  GPIO.h  HAL.h  Scheduler.h  Semaphores.h  UARTDriver.h  Util.h  system.cpp  system.h
libraries/AP_HAL_ChibiOS/: Device.cpp  GPIO.cpp  RCOutput.cpp  RCOutput.h  SoftSigReader.cpp  SoftSigReaderInt.cpp  UARTDriver.cpp  Util.cpp  system.cpp
libraries/AP_HAL_ESP32/: AP_HAL_ESP32_Namespace.h  AnalogIn.cpp  AnalogIn.h  CANIface.h  CanIface.cpp  DeviceBus.cpp  EventSource.cpp  EventSource.h  GPIO.cpp  GPIO.h  HAL_ESP32_Class.cpp  HAL_ESP32_Class.h  HAL_ESP32_Namespace.h  I2CDevice.cpp  I2CDevice.h  Print.cpp  Print.h  RCInput.cpp  RCInput.h  RCOutput.cpp  RCOutput.h  README.md  README.periph.md  RmtSigReader.cpp  SPIDevice.cpp  Scheduler.cpp  Scheduler.h  SdCard.cpp  Semaphores.cpp  Semaphores.h  SoftSigReaderRMT.cpp  Storage.cpp  Storage.h  Stream.cpp  Stream.h  UARTDriver.cpp  UARTDriver.h  Util.cpp  Util.h  WString.cpp  (+12 more)
libraries/AP_HAL_Empty/: GPIO.cpp  GPIO.h  HAL_Empty_Class.cpp  Storage.cpp  UARTDriver.cpp  UARTDriver.h
libraries/AP_HAL_Linux/: RCInput_UART.cpp
libraries/AP_HAL_SITL/: AP_HAL_SITL_Namespace.h  GPIO.cpp  (+29 more)
m4/: .gitignore  gnulib-cache.m4
main/: CMakeLists.txt  main.cpp
periph_binaries/: bootloader.ELF
(+312 files in other folders)
